# ai-code-review-agent

./: .gitignore  .railwayignore  ENV_SETUP.md  PROGRESS.md  Procfile  README.md  docker-compose.yml  insecure_auth.py  pyproject.toml  railway.toml  slow_processor.py  start.sh  storyboard.md
.cursor/rules/: coding-standards.mdc
app/: __init__.py  main.py
app/api/: admin.py
app/core/: config.py  logging.py
app/db/: connection.py  migrations.py  redis_client.py
app/github/: __init__.py  client.py
app/llm/: __init__.py  anthropic_provider.py  base.py  errors.py  factory.py  models.py  openai_provider.py  parser.py  zhipu_provider.py
app/models/: job.py  schemas.py
app/queue/: __main__.py  consumer.py  producer.py
app/workers/: __init__.py
docs/: ADMIN_DASHBOARD.md  README.md
docs/demo/: AUTO_VS_MANUAL_REVIEW.md  DEMO_REPOSITORY_README.md  DEMO_REPOSITORY_SETUP.md
docs/deployment/: RAILWAY_DEPLOYMENT.md  RAILWAY_WORKER_CONFIG.md
docs/setup/: ENV_SETUP.md  GITHUB_APP_SETUP.md  WEBHOOK_SETUP.md
docs/testing/: LLM_INTEGRATION_TESTING.md  TESTING_GUIDE.md
docs/troubleshooting/: WORKER_STATUS.md  WORKER_TROUBLESHOOTING.md
migrations/: 001_initial_schema.sql
scripts/: demo-prs.sh  railway_start.sh  setup-test-env.sh  setup.sh  start-worker.sh  test_end_to_end.py  test_github_app.py  test_llm_integration.sh  trigger_job.py
tests/: __init__.py
